--- a/DesignPattern/Repository/RepositoryPatternSample/RepositoryPatternSample/RepositoryPatternSample.csproj
+++ b/DesignPattern/Repository/RepositoryPatternSample/RepositoryPatternSample/RepositoryPatternSample.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.1" />
   </ItemGroup>
 
 </Project>
