リポジトリパターン実装 DB関連追記

--- a/DesignPattern/Repository/RepositoryPatternSample/Presentation/Properties/launchSettings.json
+++ b/DesignPattern/Repository/RepositoryPatternSample/Presentation/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "RepositoryPatternSample": {
+    "Presentation": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
