・整理 ・細かい調査事項諸々 ・マイグレーションに関してまとめ ・コンソールアプリに関して諸々

--- a/EntityFramework/EFcoreMigration/EFCore6_MigrationBundle/appsettings.json
+++ b/EntityFramework/EFcoreMigration/EFCore6_MigrationBundle/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.\\SQLEXPRESS;Initial Catalog=BundleDB;Integrated Security=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BundleDB;Integrated Security=True"
   }
 }
