・json整理 ・整理

--- a/DB_Migration/EntityFramework/ConsoleAppSample/appsettings.json
+++ b/DB_Migration/EntityFramework/ConsoleAppSample/appsettings.json
@@ -1,5 +1,5 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=SQLSV2016;Database=EFCoreMigrationTest_Itou;User ID=sa;Password=Fx67kAP"
+        "DefaultConnection": "Server=<server>;Database=<database>;User ID=<id>;Password=<password>"
     }
 }
