・実装の強制 ・dotnetプロジェクト参考追加 ・diサンプル修正

--- a/C#_WPF/MVVM_DI/Sample/MultiContainerSample/ToolkitFugaProject/ToolkitFugaProject.csproj
+++ b/C#_WPF/MVVM_DI/Sample/MultiContainerSample/ToolkitFugaProject/ToolkitFugaProject.csproj
@@ -9,7 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+    <PackageReference Include="LivetCask" Version="4.0.2" />
     <PackageReference Include="Prism.Unity" Version="8.1.97" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
   </ItemGroup>
 
 </Project>
